--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,11 @@
     <string name="false_toast">incorrect!</string>
     <string name="next_toast">next!</string>
     <string name="next_button">next</string>
+    <string name="cheat_button">cheat</string>
+    <string name="show_answe_textview">are you sure to do this?</string>
+    <string name="show_answer_button">Show Answer</string>
     <string name="first_question">hello 1</string>
     <string name="second_question">hello 2</string>
     <string name="third_question">hello 3</string>
+    <string name="title_activity_cheat">CheatActivity</string>
 </resources>
